--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -38,6 +38,7 @@
 
   <build>
     <sourceDirectory>${basedir}</sourceDirectory>
+    <testSourceDirectory>${basedir}/tests</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
@@ -63,6 +64,11 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+      </plugin>
+      <plugin>
         <groupId>org.jetbrains.teamcity</groupId>
         <artifactId>teamcity-configs-maven-plugin</artifactId>
         <version>${teamcity.dsl.version}</version>
@@ -75,6 +81,13 @@
   </build>
 
   <dependencies>
+
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
     <dependency>
       <groupId>org.jetbrains.teamcity</groupId>
       <artifactId>configs-dsl-kotlin</artifactId>
