Playing with build configuration

--- a/.teamcity/pom.xml
+++ b/.teamcity/pom.xml
@@ -37,8 +37,8 @@
   </pluginRepositories>
 
   <build>
-    <sourceDirectory>${basedir}</sourceDirectory>
-    <testSourceDirectory>${basedir}/tests</testSourceDirectory>
+    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+   <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
     <plugins>
       <plugin>
         <artifactId>kotlin-maven-plugin</artifactId>
